# AnimeStreamer-TUI

./: .gitignore  AnimeStreamer.bat  README.md  requirements.txt  setup.cfg
animestreamer/: __init__.py  config.json  globals.py  main.py  streamer.py
animestreamer/widgets/: __init__.py  _custom_footer.py  _custom_header.py  _custom_widget.py  _help.py  _path_input.py  _sort.py  _torrent_input.py  _torrent_results.py  custom_header.py  help.py  path_input.py  sort.py  torrent_input.py  torrent_results.py
src/: AnimeStreamer.py  config.json  main.py  streamer.py
