[metadata]
name = animestreamer
version = 0.1.1
author = Yelov
description = CLI tool streaming NyaaPy torrents with WebTorrent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YelovSK/AnimeStreamer-CLI
license = Apache License 2.0
license_files =
   LICENSE

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    NyaaPy
    click
    click-shell
    pyinquirer
    rich

[options.package_data]
* = config.json

[options.entry_points]
console_scripts =
    animestreamer=src.main:cli